<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.matsim-scenarios</groupId>
	<artifactId>matsim-berlin</artifactId>
	<version>5.5.2</version>

	<name>MATSim Open Berlin scenario project</name>
	<description>MATSim Open Berlin scenario project</description>

	<properties>
<!--				<matsim.version>13.0-SNAPSHOT</matsim.version>-->
		<!--		<matsim.version>13.0-2020w51-SNAPSHOT</matsim.version>-->
		<matsim.version>14.0-PR1512</matsim.version> <!-- 18.05.2021-->
	</properties>

	<repositories>

		<!-- Repository for MATSim releases (MATSim is not on Maven central) -->
		<repository>
			<id>matsim</id>
			<url>https://dl.bintray.com/matsim/matsim</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<repository>
			<!-- Geotools is not on Maven central -->
			<id>osgeo</id>
			<name>Geotools repository</name>
			<url>https://repo.osgeo.org/repository/release</url>
		</repository>

		<repository>
			<!-- Required for MATSim snaphots -->
			<id>ojo-snapshots</id>
			<url>http://oss.jfrog.org/libs-snapshot</url>
		</repository>

		<repository>
			<id>de.topobyte</id>
			<url>https://mvn.topobyte.de</url>
		</repository>

		<repository>
			<id>com.slimjars.trove4j</id>
			<url>https://mvn.slimjars.com</url>
		</repository>

		<repository>
			<id>SBB</id>
			<url>https://schweizerischebundesbahnen.bintray.com/simba.mvn</url>
		</repository>

	</repositories>

	<dependencies>

		<!-- This is the matsim "core": -->
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>dvrp</artifactId>
			<version>${matsim.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>emissions</artifactId>
			<version>${matsim.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>noise</artifactId>
			<version>${matsim.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>accidents</artifactId>
			<version>${matsim.version}</version>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>vsp</artifactId>
			<version>${matsim.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- Include the JUnit testing library.  Not transitive. -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<!--MATSim test infrastructure.  Not transitive.-->
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<type>test-jar</type>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>common</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>analysis</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>bicycle</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.matsim-org</groupId>
			<artifactId>GTFS2MATSim</artifactId>
			<version>11.2</version>
			<exclusions>
				<exclusion>
					<artifactId>gt-epsg-hsql</artifactId>
					<groupId>org.geotools</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>drt</artifactId>
			<version>${matsim.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.github.matsim-vsp</groupId>
			<artifactId>opt-drt</artifactId>
			<version>e955606ea4</version>
		</dependency>
		
		<dependency>
	    	<groupId>com.github.matsim-vsp</groupId>
	    	<artifactId>matsim-analysis</artifactId>
	    	<version>v3.2</version>
			<!-- <version>94a0b679d7</version> -->
        </dependency>

		<dependency>
		<!-- This is the matsim "freight" contrib: -->
			<groupId>org.matsim.contrib</groupId>
			<artifactId>freight</artifactId>
			<version>${matsim.version}</version>

		<exclusions>
		<exclusion>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</exclusion>
		<exclusion>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
		</exclusion>

    </exclusions> 
    
		</dependency>

		<!-- for weighted random draw: https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<showWarnings>false</showWarnings>
					<showDeprecation>false</showDeprecation>
					<encoding>UTF-8</encoding>
					<!-- configure initial and maximal memory for compiling -->
					<fork>true</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
					<compilerArguments>
						<Xmaxwarns>4000</Xmaxwarns>
						<Xmaxerrs>100</Xmaxerrs>
					</compilerArguments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<excludes>
						<exclude>**/*$*</exclude> <!-- exclude all inner classes -->
						<exclude>org/matsim/testcases/TestDepth.java</exclude>
						<exclude>org/matsim/testcases/MatsimTestCase.java</exclude>
					</excludes>
					<forkMode>once</forkMode>
					<!-- avoid out of memory errors: -->
					<argLine>-Xmx6000m -Djava.awt.headless=true -Dmatsim.preferLocalDtds=true</argLine>
					<!--necessary in tu berlin gitlab. BUT not good in other places, so solve by command line switch only where needed.  kai, nov'18-->
					<!--<useSystemClassLoader>false</useSystemClassLoader>-->
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>${project.basedir}/${project.build.finalName}.jar</outputFile>
							<transformers>
								<!-- This bit sets the main class for the executable jar as you otherwise would with the assembly plugin -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>org.matsim.gui.RunBerlinScenarioGUI</Main-Class>
										<Specification-Vendor>org.matsim</Specification-Vendor>
										<Implementation-Vendor>org.matsim</Implementation-Vendor>
										<Implementation-Version>${project.version}</Implementation-Version>
									</manifestEntries>
								</transformer>
								<!-- This bit merges the various GeoTools META-INF/services files         -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>

				<defaultGoal>assembly:assembly</defaultGoal>
				<!--(I think that the above line is the reason why mvn -Prelease works-->
				<!--without defining a goal. And it presumably only works because the-->
				<!--assemply plugin is defined above. kai, oct'19)-->

				<pluginManagement>
					<!--pluginManagement further defines plugins *if* they are loaded-->
					<!--elsewhere.  So this will only have an effect if the assembly plugin or-->
					<!--the jar plugin are loaded above.  It then reconfigures it for the-->
					<!--profile run.-->

					<plugins>
						<plugin>
							<artifactId>maven-assembly-plugin</artifactId>
							<configuration>
								<descriptors>
									<descriptor>src/main/assembly/assembly-release.xml</descriptor>
								</descriptors>
							</configuration>
						</plugin>
						<plugin>
							<artifactId>maven-jar-plugin</artifactId>
							<configuration>
								<archive>
									<manifest>
										<addClasspath>true</addClasspath>
										<classpathPrefix>libs/</classpathPrefix>
									</manifest>
								</archive>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

</project>
